--- a/build.gradle
+++ b/build.gradle
@@ -10,4 +10,20 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    //implementation 'org.springframework.boot:spring-boot-starter:2.4.0'
+    //implementation 'org.springframework.boot:spring-boot-starter-tomcat:2.4.0'
+    //implementation 'org.springframework:spring-webmvc:5.3.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+test {
+    useJUnitPlatform()
+}
+
+bootRun.environment([
+        "WELCOME_MESSAGE": "howdy",
+])
+
+test.environment([
+        "WELCOME_MESSAGE": "Hello from test",
+])
