--- a/manifest.yml
+++ b/manifest.yml
@@ -3,7 +3,7 @@ applications:
   - name: pal-tracker
     path: build/libs/pal-tracker.jar
     routes:
-      - route: pal-tracker-cem-akbaba.apps.evans.pal.pivotal.io
+      - route: ((appName))-((reviewRoute)).((domain))
     env:
-      WELCOME_MESSAGE: Hello from the review environment
-      JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
+      WELCOME_MESSAGE: ((welcomeMessage))
+      JBP_CONFIG_OPEN_JDK_JRE: ((jreVersion))
