--- a/vars.yml
+++ b/vars.yml
@@ -1,6 +1,5 @@
 welcomeMessage: Hello from the review environment
 jreVersion: '{ jre: { version: 11.+ } }'
-##appName: pal-tracker
-appName: ${{ secrets.CF_APP_NAME }}
+appName: pal-tracker
 reviewRoute: cem-akbaba
 domain: apps.evans.pal.pivotal.io
