--- a/manifest.yml
+++ b/manifest.yml
@@ -12,7 +12,7 @@ applications:
   health-check-http-endpoint: /actuator/health/liveness
   timeout: 20
   routes:
-  - route: ((appName))-((reviewRoute)).((domain))
+  - route: pal-tracker-cem-akbaba.apps.evans.pal.pivotal.io
   services:
   - tracker-database
   env:
